# Platonic-Triangle-World

./: .gitignore  CMakeLists.txt  README.md  glad.c
include/: VAO.h  VBO.h  camera.h  common.h  cube.h  input.h  shader.h  texture.h
shaders/: colors.fs  colors.vs  shader.fs
src/: main.c
src/game/: camera.c  input.c
src/model/: cube.c
src/util/: VAO.c  VBO.c  common.c  shader.c  texture.c
